Added chainlink functionality to both games

--- a/views/profile-symbals.ejs
+++ b/views/profile-symbals.ejs
@@ -50,6 +50,9 @@
                     id="btn-login2">Burn using Sequence Wallet</button>
                 <button class="btn btn-warning" style="display:none;" id="btn-logout2">Logout</button>
             </div>
+            <div style="float: right; border-radius: 50%; margin-right:60px; "><a href="/"
+                    class="btn btn-primary">Home</a></div>
+
         </div>
         <br><br>
         <strong> You can get a multiplier by consuming your NFT to increase your score more and more</strong>
@@ -90,9 +93,9 @@
             <a id="nfts-url" href="" style="display: none;" target="_blank">Check your NFTs here </a>
 
         </div>
-        <script src="moralis-connection.js"></script>
-        <script src="js/scoreManager.js"></script>
-        <script src="profile.js"></script>
+        <script src="/symbalsjs/moralis-connection.js"></script>
+        <script src="/symbalsjs/scoreManager.js"></script>
+        <script src="/symbalsjs/profile.js"></script>
 </body>
 
 </html>
