--- a/views/symbalsHome.ejs
+++ b/views/symbalsHome.ejs
@@ -18,7 +18,7 @@
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
 
   <script src="https://unpkg.com/moralis/dist/moralis.js"></script>
-  <script src="js/dom-to-image.js"></script>
+  <script src="symbalsjs/dom-to-image.js"></script>
   <!-- <script src="https://superal.github.io/canvas2image/canvas2image.js"></script> -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.0/html2canvas.min.js" integrity="sha512-UcDEnmFoMh0dYHu0wGsf5SKB7z7i5j3GuXHCnb3i4s44hfctoLihr896bxM0zL7jGkcHQXXrJsFIL62ehtd6yQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -40,37 +40,37 @@
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
   crossorigin="anonymous"
 ></script>
-<script src="js/scoreManager.js"></script>
+<script src="symbalsjs/scoreManager.js"></script>
 
 <script src="https://unpkg.com/0xsequence@latest/dist/0xsequence.umd.min.js"></script>
-  <script src="js/phaser.min.js"></script>
-  <script src="js/global.js"></script>
-  <script src="js/objects/Prefab.js"></script>
-  <script src="js/objects/Mission.js"></script>
-  <script src="js/objects/FlameParticle.js"></script>
-  <script src="js/objects/Emitter.js"></script>
-  <script src="js/objects/Error.js"></script>
-  <script src="js/objects/CircleMask.js"></script>
-  <script src="js/objects/BlackCircle.js"></script>
-  <script src="js/objects/DashCircle.js"></script>
-  <script src="js/objects/TimeCircle.js"></script>
-  <script src="js/objects/BloodCircle.js"></script>
-  <script src="js/objects/Pointer.js"></script>
-  <script src="js/objects/Tree.js"></script>
-  <script src="js/objects/TreeAnim.js"></script>
-  <script src="js/objects/MissionButton.js"></script>
-  <script src="js/managers/TreeManager.js"></script>
-  <script src="js/managers/PointerManager.js"></script>
-  <script src="js/managers/SoundManager.js"></script>
-  <script src="js/managers/ScoreManager.js"></script>
-  <script src="js/managers/LevelManager.js"></script>
-  <script src="js/states/BaseState.js"></script>
-  <script src="js/states/BootState.js"></script>
-  <script src="js/states/PreloadState.js"></script>
-  <script src="js/states/MenuState.js"></script>
-  <script src="js/states/StartState.js"></script>
-  <script src="js/states/WinState.js"></script>
-  <script src="js/main.js"></script>
+  <script src="symbalsjs/phaser.min.js"></script>
+  <script src="symbalsjs/global.js"></script>
+  <script src="symbalsjs/objects/Prefab.js"></script>
+  <script src="symbalsjs/objects/Mission.js"></script>
+  <script src="symbalsjs/objects/FlameParticle.js"></script>
+  <script src="symbalsjs/objects/Emitter.js"></script>
+  <script src="symbalsjs/objects/Error.js"></script>
+  <script src="symbalsjs/objects/CircleMask.js"></script>
+  <script src="symbalsjs/objects/BlackCircle.js"></script>
+  <script src="symbalsjs/objects/DashCircle.js"></script>
+  <script src="symbalsjs/objects/TimeCircle.js"></script>
+  <script src="symbalsjs/objects/BloodCircle.js"></script>
+  <script src="symbalsjs/objects/Pointer.js"></script>
+  <script src="symbalsjs/objects/Tree.js"></script>
+  <script src="symbalsjs/objects/TreeAnim.js"></script>
+  <script src="symbalsjs/objects/MissionButton.js"></script>
+  <script src="symbalsjs/managers/TreeManager.js"></script>
+  <script src="symbalsjs/managers/PointerManager.js"></script>
+  <script src="symbalsjs/managers/SoundManager.js"></script>
+  <script src="symbalsjs/managers/ScoreManager.js"></script>
+  <script src="symbalsjs/managers/LevelManager.js"></script>
+  <script src="symbalsjs/states/BaseState.js"></script>
+  <script src="symbalsjs/states/BootState.js"></script>
+  <script src="symbalsjs/states/PreloadState.js"></script>
+  <script src="symbalsjs/states/MenuState.js"></script>
+  <script src="symbalsjs/states/StartState.js"></script>
+  <script src="symbalsjs/states/WinState.js"></script>
+  <script src="symbalsjs/main.js"></script>
   <style>
   * {
     margin: 0px;
@@ -93,6 +93,8 @@
  <div id="multiplierDiv">
   <div style="float: left; border-radius: 50%; margin-right:60px; color: yellow; font-size: 35px;" ><span id="multiplierString">Multiplier Disabled</span>
 </div> 
+<div style="float: right; border-radius: 50%; margin-right:60px; " ><a href="/profile/symbals" class="btn btn-primary">Profile</a></div>
+
   <div id="moralisBtn">
     <div style="float: right; border-radius: 50%; margin-right:60px; " ><button class="btn btn-success" id="btn-login">Moralis Metamask Login</button>
       <button class="btn btn-warning" style="display:none;" id="btn-logout">Logout</button></div>
@@ -103,7 +105,7 @@
   </div>
   </div>
   <div id="game" class="game"></div>
-  <script src="moralis-connection.js"></script>
+  <script src="symbalsjs/moralis-connection.js"></script>
 
 </body>
 </html>
