--- a/views/symbalsHome.ejs
+++ b/views/symbalsHome.ejs
@@ -93,16 +93,17 @@
  <div id="multiplierDiv">
   <div style="float: left; border-radius: 50%; margin-right:60px; color: yellow; font-size: 35px;" ><span id="multiplierString">Multiplier Disabled</span>
 </div> 
+<div id="">
 <div style="float: right; border-radius: 50%; margin-right:60px; " ><a href="/profile/symbals" class="btn btn-primary">Profile</a></div>
-
+ </div>
   <div id="moralisBtn">
     <div style="float: right; border-radius: 50%; margin-right:60px; " ><button class="btn btn-success" id="btn-login">Moralis Metamask Login</button>
       <button class="btn btn-warning" style="display:none;" id="btn-logout">Logout</button></div>
   </div> 
-  <div id="sequenceBtn">
+  <!-- <div id="sequenceBtn">
     <div style="float: right; border-radius: 50%; margin-right:60px; " ><button class="btn btn-success" id="btn-login2">Sequence Metamask Login</button>
       <button class="btn btn-warning" style="display:none;" id="btn-logout">Logout</button></div>
-  </div>
+  </div> -->
   </div>
   <div id="game" class="game"></div>
   <script src="symbalsjs/moralis-connection.js"></script>
