--- a/views/profile-symbals.ejs
+++ b/views/profile-symbals.ejs
@@ -46,10 +46,10 @@
                     id="btn-login">Moralis Metamask Login</button>
                 <button class="btn btn-warning" style="display:none;" id="btn-logout">Logout</button>
             </div>
-            <div style="float: right; border-radius: 50%; margin-right:60px; "><button class="btn btn-success"
+            <!-- <div style="float: right; border-radius: 50%; margin-right:60px; "><button class="btn btn-success"
                     id="btn-login2">Burn using Sequence Wallet</button>
                 <button class="btn btn-warning" style="display:none;" id="btn-logout2">Logout</button>
-            </div>
+            </div> -->
             <div style="float: right; border-radius: 50%; margin-right:60px; "><a href="/"
                     class="btn btn-primary">Home</a></div>
 
