--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Web3 Arcade</title>
+  <title>NFT Game Machine</title>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
@@ -40,7 +40,7 @@
 
 <body>
   <div class="container">
-    <h2 class="title">Web3 Arcade</h2>
+    <h2 class="title">NFT Game Machine</h2>
 
   </div>
   <br>
