--- a/views/home.ejs
+++ b/views/home.ejs
@@ -68,9 +68,9 @@
     </div>
     <div class="row container">
       <div class="card col-6" style="width: 18rem;">
-        <img src="/symbals_logo.png" class="card-img-top" alt="2048 Game">
+        <img src="/symbals_logo.png" class="card-img-top" alt="Symbals Game">
         <div class="card-body">
-          <h5 class="card-title">2048</h5>
+          <h5 class="card-title">Symbals</h5>
           <p class="card-text">Symbals is a game with an awesome UI and sound effects, which helps calm the mind</p>
           <a href="/symbals" class="btn btn-primary">Play Symbals</a>
         </div>
